2-way functionality with db updates for add / rem
