# env/swagger.yaml
@@ -398,37 +398,37 @@ paths:
                   error:
                     type: string
 
-  # # remove friend endpoint
-  # /remove_friend:
-  #   post:
-  #     operationId: app.remove_friend
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               email:
-  #                 type: string
-  #               friend_email:
-  #                 type: string
-  #     responses:
-  #       "200":
-  #         description: Friend removed successfully
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 message:
-  #                   type: string
-  #       "401":
-  #         description: Friend not found!
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 error:
-  #                   type: string
+  # remove friend endpoint
+  /remove_friend:
+    post:
+      operationId: app.remove_friend
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                friend_email:
+                  type: string
+      responses:
+        "200":
+          description: Friend removed successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "401":
+          description: Friend not found!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
